[package]
name = "jpg-png"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.1"

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
rev = "cdb18e610a72b4a025d7e1890140393adee5b087"

[profile.release]
# Do not open a console when the program is run
codegen-units = 1
opt-level = 'z'
lto = true
panic = 'abort'
